# agentic-code-review-and-refinement

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  review.yml
agentic_code_review/: .env.example  __init__.py  config.py  github_integration.py  models.py
agentic_code_review/agents/: base_agent.py  test_agent.py
agentic_code_review/code_analysis/: __init__.py  code_analyzer.py  language_config.py  signature_parser.py
agentic_code_review/github_app/: __init__.py  __main__.py  constants.py  models.py  pr_manager.py  server.py
agentic_code_review/github_app/auth/: authenticator.py
agentic_code_review/github_app/config/: __init__.py  logging_config.py
agentic_code_review/github_app/decorators/: __init__.py  pr_decorators.py
agentic_code_review/github_app/handlers/: agent_handler.py
agentic_code_review/github_app/managers/: pr_manager.py
agentic_code_review/llm_refiner/: __init__.py  comment_processor.py  context_extractor.py  diff_extractor.py  incremental_patcher.py  llm_client.py  models.py  refinement_agent.py  unit_extractor.py
agentic_code_review/llm_refiner/languages/: __init__.py  base_parser.py  java_parser.py  js_ts_parser.py  parser_registry.py  parser_utils.py  python_parser.py
agentic_code_review/llm_refiner/prompts/: __init__.py  refinement_prompt.py  refinement_prompts.py
agentic_code_review/llm_reviewer/: __init__.py  reviewer.py
agentic_code_review/llm_reviewer/prompts/: __init__.py  review_prompts.py
agentic_code_review/scripts/: README.md  __init__.py  setup.py  smee.sh
agentic_code_review/utils/: code_formatter.py  logging.py
agentic_code_review/web/: __init__.py  github_app.py
agentic_code_review/web/auth/: authenticator.py
agentic_code_review/web/config/: logging_config.py
agentic_code_review/web/handlers/: agent_handler.py
docs/: installation.md
docs/assets/: Review-Refine Agentic Workflow.excalidraw
tests/: conftest.py  test_base_agent.py  test_comment_processor.py  test_github_integration.py  test_logging.py  test_python_parser.py  test_unit_extractor.py
